--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-An open source Library Editor for Game Maker and LateralGM Libraries. Written in Java as an alternative to YoYo Games' Library Maker, this project hopes to address many of its shortcomings by being cross-platform, developer- AND community-supported, feedback-driven, and open source.
+An open source Library Editor
+for Game Maker and LateralGM Libraries.
+
+Written in Java as an alternative to YoYo Games'
+Library Maker, this project hopes to address many
+of its shortcomings by being cross-platform, developer-
+AND community-supported, feedback-driven, and open source.
