--- a/org/lateralgm/libmaker/messages.properties
+++ b/org/lateralgm/libmaker/messages.properties
@@ -1,5 +1,67 @@
+Menu.FILE=	File		F
+Menu.NEW=	New			N
+Menu.OPEN=	Open ...	O
+Menu.SAVE=	Save		S
+Menu.SAVEAS=Save As ...	A
+Menu.MERGE=	Merge ...	M
+Menu.EXIT=	Exit		X
+
+Menu.HELP=		Help		H
+Menu.MANUAL=	Manual		M
+Menu.ABOUT=		About ...	A
+
+Tool.NEW=	New (Ctrl+N)
+Tool.OPEN=	Open ... (Ctrl+O)
+Tool.SAVE=	Save (Ctrl+S)
+Tool.SAVEAS=Save As ...
+Tool.MANUAL=Manual (F1)
+
 LibMaker.TITLE= LateralGM LibMaker: {0}
 LibMaker.NEWLIB= <new>
+LibMaker.SAVE_CHANGES= Library has been changed. Save changes?
+
+ErrorDialog.COPY= Copy
+ErrorDialog.OK  = OK
+
+### Action Enum Strings ###
+ActionKind.NORMAL=		Normal
+ActionKind.BEGIN_GROUP=	Begin Group
+ActionKind.END_GROUP=	End Group
+ActionKind.ELSE=		Else
+ActionKind.EXIT=		Exit
+ActionKind.REPEAT=		Repeat
+ActionKind.VARIABLE=	Variable
+ActionKind.CODE=		Code
+ActionKind.PLACEHOLDER=	-Placeholder
+ActionKind.SEPARATOR=	-Separator
+ActionKind.LABEL=		-Label
+
+ActionIfaceKind.NORMAL=	Normal
+ActionIfaceKind.NONE=	None
+ActionIfaceKind.ARROWS=	Arrows
+ActionIfaceKind.CODE=	Code
+ActionIfaceKind.TEXT=	Text
+
+Execution.NOTHING=	Nothing
+Execution.FUNCTION=	Function
+Execution.CODE=		Code
+
+ArgumentType.EXPRESSION=	Expression
+ArgumentType.STRING=		String
+ArgumentType.BOTH=			Both
+ArgumentType.BOOLEAN=		Boolean
+ArgumentType.MENU=			Menu
+ArgumentType.COLOR=			Color
+ArgumentType.FONT_STRING=	Font String
+ArgumentType.SPRITE=		Sprite
+ArgumentType.SOUND=			Sound
+ArgumentType.BACKGROUND=	Background
+ArgumentType.PATH=			Path
+ArgumentType.SCRIPT=		Script
+ArgumentType.OBJECT=		Object
+ArgumentType.ROOM=			Room
+ArgumentType.FONT=			Font
+ArgumentType.TIMELINE=		Timeline
 
 ### Package file ###
 FileChooser.FILE_FILTER=Library Files ({0})
@@ -28,4 +90,44 @@ LibReader.ERROR_CLOSEFAILED=File closing failsafe has failed
 LibReader.ERROR_INVALIDACTION=Unsupported action definition, or \
 	corrupt/invalid in action {0}, Library: {1} - as read, version = {2}
 LibReader.ERROR_NOTFOUND=Error opening File {0}: The file was not found
-LibReader.ERROR_READING=Error reading file {0}: \n{1}
+LibReader.ERROR_READING=Error reading file {0}: \n{1} 
+
+### Package mockui ###
+ExecutionPane.EXEC_CODE=Code ...
+ExecutionPane.TYPE=Type
+
+GeneralPane.ACT_ID=Action Id:
+GeneralPane.ADVANCED=Advanced
+GeneralPane.DESCRIPTION=Description:
+GeneralPane.EXEC_CODE=Execution Code
+GeneralPane.EXECUTION=Execution:
+GeneralPane.FUNCTION=Function:
+GeneralPane.HIDDEN=Hidden
+GeneralPane.HINT=Hint Text:
+GeneralPane.IMAGE=Image:
+GeneralPane.IMAGE_CHANGE=Change
+GeneralPane.KIND=Kind:
+GeneralPane.LIST=List Text:
+GeneralPane.NAME=Name:
+GeneralPane.PRO=Pro Edition Only
+
+InterfacePane.APPLY=Show "Apply To"
+InterfacePane.ARG_COUNT=Argument Count:
+InterfacePane.KIND=Kind:
+InterfacePane.QUESTION=Question
+InterfacePane.RELATIVE=Show "Relative"
+
+MockUI.CAPTION=Tab caption:
+MockUI.LIB_ID=Library Id:
+MockUI.CYCLE_TIP=Randomize ID
+MockUI.GENERAL=General
+MockUI.INTERFACE=Interface
+MockUI.EXECUTION=Execution
+MockUI.INFO=Information ...
+MockUI.CODE=Initialization Code
+MockUI.ADVANCED=Advanced
+MockUI.ACTIONS=Actions:
+MockUI.ADD=Add
+MockUI.DELETE=Delete
+MockUI.UP=Up
+MockUI.DOWN=Down
