Added an icon for the Frame

--- a/org/lateralgm/libmaker/icons/README
+++ b/org/lateralgm/libmaker/icons/README
@@ -1,5 +1,10 @@
 This directory contains the following icons (.png extension omitted):
 
+ Frame icon:
+   lgl.svg lgl-128
+ Copyright 2012 IsmAvatar <IsmAvatar@gmail.com>
+ Copyright 2007 Quadduc <quadduc@gmail.com>
+
  Resource icons for LGM:
    script
  Copyright 2011 Josh Ventura <JoshV10@gmail.com>
