Info pane. Last Changed supported now.

--- a/org/lateralgm/libmaker/messages.properties
+++ b/org/lateralgm/libmaker/messages.properties
@@ -111,6 +111,12 @@ GeneralPane.LIST=List Text:
 GeneralPane.NAME=Name:
 GeneralPane.PRO=Pro Edition Only
 
+InfoPane.AUTHOR=Author:
+InfoPane.DIALOG_TITLE=Library Information
+InfoPane.INFORMATION=Information:
+InfoPane.LASTCHANGED=Last changed:
+InfoPane.VERSION=Version:
+
 InterfacePane.APPLY=Show "Apply To"
 InterfacePane.ARG_COUNT=Argument Count:
 InterfacePane.KIND=Kind:
