Added ActionPreview. Works great, just not sure where to hook it in.

--- a/org/lateralgm/libmaker/messages.properties
+++ b/org/lateralgm/libmaker/messages.properties
@@ -137,3 +137,18 @@ MockUI.ADD=Add
 MockUI.DELETE=Delete
 MockUI.UP=Up
 MockUI.DOWN=Down
+
+ActionPreview.ARG_BOOL_FALSE=false
+ActionPreview.ARG_BOOL_TRUE=true
+ActionPreview.APPLIES=Applies to
+ActionPreview.APPLY_OBJ_EX=Sample Object
+ActionPreview.APPLY_OBJ_SELF=Self
+ActionPreview.APPLY_OBJECT=Object:
+ActionPreview.APPLY_OTHER=Other
+ActionPreview.APPLY_SELF=Self
+ActionPreview.ARG_RES_EX=Sample Res
+ActionPreview.ARG_RES_NONE=<No resource>
+ActionPreview.DISCARD=Discard
+ActionPreview.NOT=Not
+ActionPreview.RELATIVE=Relative
+ActionPreview.SAVE=Save
