Added arrows image for preview

--- a/org/lateralgm/libmaker/icons/README
+++ b/org/lateralgm/libmaker/icons/README
@@ -1,7 +1,7 @@
 This directory contains the following icons (.png extension omitted):
 
  Frame icon:
-   lgl.svg lgl-128 blank-tile
+   arrows.svg arrows blank-tile lgl.svg lgl-128
  Copyright 2012 IsmAvatar <IsmAvatar@gmail.com>
  Copyright 2007 Quadduc <quadduc@gmail.com>
 
