--- a/org/lateralgm/libmaker/messages.properties
+++ b/org/lateralgm/libmaker/messages.properties
@@ -23,6 +23,43 @@ LibMaker.SAVE_CHANGES= Library has been changed. Save changes?
 ErrorDialog.COPY= Copy
 ErrorDialog.OK  = OK
 
+AboutBox.TITLE          = About LibMaker
+AboutBox.LICENSE_TITLE  = License
+AboutBox.OPTION_LICENSE = License
+AboutBox.OPTION_CLOSE   = Close
+AboutBox.ABOUT=<h1 style="white-space: nowrap">LibMaker version 1.0</h1>\
+	<p style="white-space: nowrap">Copyright &copy; 2012 IsmAvatar \
+	&lt;<a href="mailto:IsmAvatar@gmail.com">IsmAvatar@gmail.com</a>&gt;</p>\
+	\
+	<p style="white-space: nowrap">Some code used with permission from LateralGM.</p>\
+	\
+	<p style="white-space: nowrap">Copyright &copy; 2007-2012 IsmAvatar \
+	&lt;<a href="mailto:IsmAvatar@gmail.com">IsmAvatar@gmail.com</a>&gt;<br>\
+	Copyright &copy; 2006-2008 Clam \
+	&lt;<a href="mailto:clamisgood@gmail.com">clamisgood@gmail.com</a>&gt;<br>\
+	Copyright &copy; 2007-2009 Quadduc \
+	&lt;<a href="mailto:quadduc@gmail.com">quadduc@gmail.com</a>&gt;<br>\
+	Copyright &copy; 2003, 2004, 2011 others</p>\
+	\
+	<p>LibMaker comes with ABSOLUTELY NO WARRANTY. This is free software, \
+	and you are welcome to redistribute it under certain conditions. \
+	See <em>License</em> for details.</p>
+AboutBox.LICENSE=\
+	<p>This program is free software: you can redistribute it and/or \
+	modify it under the terms of the GNU General Public License \
+	as published by the Free Software Foundation, either version 3 \
+	of the License, or (at your option) any later version.</p> \
+	\
+	<p>This program is distributed in the hope that it will be useful, \
+	but WITHOUT ANY WARRANTY; without even the implied warranty of \
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the \
+	GNU General Public License for more details.</p> \
+	\
+	<p>You should have received a copy of the GNU General Public License \
+	along with this program. If not, see <a href="http://www.gnu.org/licenses/">\
+	http://www.gnu.org/licenses/</a>.</p>
+
+
 ### Action Enum Strings ###
 ActionKind.NORMAL=		Normal
 ActionKind.BEGIN_GROUP=	Begin Group
