Hooked in Action Preview with right-aligned toolbar button. Removed dependencies on CustomAction (replaced with AbstractAction).

--- a/org/lateralgm/libmaker/icons/README
+++ b/org/lateralgm/libmaker/icons/README
@@ -14,7 +14,7 @@ This directory contains the following icons (.png extension omitted):
    menu/
      help info new open save-as save
    toolbar/
-     accept copy cut find paste redo undo
+     accept copy cut find paste redo undo view
  Copyright 2003-2004 David Vignoni
 
  Stock icons for OpenOffice.org:
