--- a/org/lateralgm/libmaker/messages.properties
+++ b/org/lateralgm/libmaker/messages.properties
@@ -10,11 +10,12 @@ Menu.HELP=		Help		H
 Menu.MANUAL=	Manual		M
 Menu.ABOUT=		About ...	A
 
-Tool.NEW=	New (Ctrl+N)
-Tool.OPEN=	Open ... (Ctrl+O)
-Tool.SAVE=	Save (Ctrl+S)
-Tool.SAVEAS=Save As ...
-Tool.MANUAL=Manual (F1)
+Tool.NEW=	 New (Ctrl+N)
+Tool.OPEN=	 Open ... (Ctrl+O)
+Tool.SAVE=	 Save (Ctrl+S)
+Tool.SAVEAS= Save As ...
+Tool.MANUAL= Manual (F1)
+Tool.PREVIEW=Preview Action
 
 LibMaker.TITLE= LateralGM LibMaker: {0}
 LibMaker.NEWLIB= <new>
@@ -175,6 +176,7 @@ MockUI.DELETE=Delete
 MockUI.UP=Up
 MockUI.DOWN=Down
 
+ActionPreview.NO_ACTION=You must have an action selected to preview first.
 ActionPreview.ARG_BOOL_FALSE=false
 ActionPreview.ARG_BOOL_TRUE=true
 ActionPreview.APPLIES=Applies to
